added put and delete and error handling/validation
