# routes/products.js
@@ -5,12 +5,12 @@ const productsController = require("../controllers/products");
 
 router.get("/", productsController.getAll);
 
-// router.get('/:id', contactsController.getSingle);
+router.get("/:id", productsController.getSingle);
 
 router.post("/", productsController.createProduct);
 
-// router.put('/:id', contactsController.updateContact);
+router.put("/:id", productsController.updateProduct);
 
-// router.delete('/:id', contactsController.deleteContact);
+router.delete("/:id", productsController.deleteProduct);
 
 module.exports = router;
